--- a/Number Base Converter/Convert fractions/task-info.yaml
+++ b/Number Base Converter/Convert fractions/task-info.yaml
@@ -2,54 +2,23 @@ type: edu
 files:
 - name: src/converter/Main.kt
   visible: true
-  text: |
+  text: |-
     package converter
 
-    const val baseSym = "0123456789ABCDEF"
+    const val baseSym = "0123456789ABDEF"
 
     fun main() {
         println("Hello, world!")
-        while (true) {
-            println("Do you want to convert /from decimal or /to decimal? (To quit type /exit)")
-            var command = readln()
-            when (command) {
-                "/from" -> {
-                    fromDec()
-                }
-                "/to" -> {
-                    toDec()
-                }
-                "/exit" -> {
-                    return
-                }
-            }
-        }
-    }
-
-    fun toDec() {
-        print("Enter source number: ")
-        var number = readln().uppercase()
-        print("Enter source base: ")
-        val base = readln().toInt()
-        var result = 0
-        for (sym in number) {
-            val idx = baseSym.indexOf(sym)
-            result = base * result + idx
-        }
-        println("Conversion to decimal result: $result")
-    }
-
-
-     fun fromDec() {
         print("Enter number in decimal system: ")
-        var number = readln().toInt()
+        val number = readln().toInt()
         print("Enter target base: ")
         val base = readln().toInt()
         var result = ""
+        var quo = number
         do{
-            result += baseSym[number % base]
-            number /= base
-        }while (number > 0)
+            result += baseSym[quo % base]
+            quo /= base
+        }while (quo > 0)
         result = result.reversed()
         println("Conversion result: $result")
     }
@@ -609,5 +578,5 @@ files:
     \   return true;\n        }\n        \n    }\n}\n"
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/12348#comment
-status: Unchecked
-record: -1
+status: Solved
+record: 4
