--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/495737/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 06 May 2022 00:59:45 UTC
+update_date: Fri, 13 May 2022 12:11:34 UTC
 stages:
 - id: 856
   step: 12345
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 859
   step: 12348
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Binary numbers
