--- a/Number Base Converter/Convert fractions/task-info.yaml
+++ b/Number Base Converter/Convert fractions/task-info.yaml
@@ -579,4 +579,8 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/12348#comment
 status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Sat, 14 May 2022 07:00:54 UTC
 record: 4
